<resources>
    <string name="app_name">Restaurants</string>
    <string name="log_in_button">Log in</string>
    <string name="sign_in_hyperlink">Don\'t have an account? Sign up here</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="name_edit">First name</string>
    <string name="last_name_edit">Last name</string>
    <string name="repeat_pass_hint">Repeat password</string>
    <string name="register_button">Register</string>
    <string name="login_hypertext">Already have an account? Log in here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>